# ChangeLog for x11-apps/mkfontdir
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.41 2009/04/05 23:36:24 tester Exp $

  05 Apr 2009; Olivier Crête <tester@gentoo.org> mkfontdir-1.0.4.ebuild:
  amd64 stable

*mkfontdir-1.0.4 (10 Mar 2008)

  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +mkfontdir-1.0.4.ebuild:
  Bump.

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -mkfontdir-1.0.2.ebuild:
  Drop old ebuilds.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  mkfontdir-1.0.3.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> mkfontdir-1.0.3.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable for HPPA (bug #175465).

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> mkfontdir-1.0.3.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable on ia64 wrt bug #175465

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> mkfontdir-1.0.3.ebuild:
  Stable on ppc64; bug #175465

*mkfontdir-1.0.3 (31 Mar 2007)

  31 Mar 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  +mkfontdir-1.0.3.ebuild:
  Version bump.  Fixes manpage locations for some platforms.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  mkfontdir-1.0.2.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> mkfontdir-1.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> mkfontdir-1.0.2.ebuild:
  Mark 1.0.2 stable on ia64
