@@ -1,6 +1,6 @@
 DIST mkfontdir-1.0.3.tar.bz2 62898 RMD160 707df69cf0b3197e88b87003bef5b389b0e9cb1e SHA1 cb0afde150af5957d67f921673dbaed3402978d1 SHA256 2a786e03611a53c7f6263db446c0c9ef76e94bcf930b0b5867cc6a9c19653074
 DIST mkfontdir-1.0.4.tar.bz2 70506 RMD160 4f7f93f34195b16b0cc250d527df91b300449dd1 SHA1 1e52e7c42c783435ea72e69bd4adb976e62a9d96 SHA256 6f9a3cc70d27704ee8e4ff01d5d69c974b059fd7e470172b68cfa477c7caf8e3
-EBUILD mkfontdir-1.0.3.ebuild 509 RMD160 360681c893fa07446d340cfa5e602158e29d11b8 SHA1 77e9114e1592575ddf5ca42804b5f55d244444f1 SHA256 e0e38fef1b69dbb5a426e87fea3763ef99d2a11214fda57073d8561b071ade0c
-EBUILD mkfontdir-1.0.4.ebuild 532 RMD160 c0d27c2524e838a4180c2eff306714d340978f3b SHA1 bf454247089ace433765c2a21b6d538fd15ded9d SHA256 bae2fcc007ed007ea4867068d8c427b2ad321693cc027cc529c7de49ae9ced49
-MISC ChangeLog 4725 RMD160 496d29490195d1cc594df684476124e9a6fa477c SHA1 a99859eafac3ae88af665d199697caaf8ab1fea7 SHA256 0c492646d1885389cad25b556832391c334cf2ec859b1379830a82e794a34b87
+EBUILD mkfontdir-1.0.3.ebuild 513 RMD160 6d7cd716a5ca9c70a8f93de0197ffe06c58672a3 SHA1 cff10254605514730868d74ee1279caae0a6fdd0 SHA256 1c932d6f2b3ab784521b5e6f0c61779d319f81c4b2aecd0d4b87953a62c40c9e
+EBUILD mkfontdir-1.0.4.ebuild 536 RMD160 c5ebb51ecd6584d9720ac973cc37ae9e2db3cceb SHA1 c726b285c23b26e52e2e3dba96b6bc39c6264af6 SHA256 62bb13862dff41718ba0878d35cdcae98ecdf3e26b09b638eb6a1c77deb2cb5a
+MISC ChangeLog 5082 RMD160 32d3063e486f4b619b13137c31bc0f9f216bd77c SHA1 44434cf9d9bed5ded8eb13b2b1136487d0179017 SHA256 8f97dc191d54273c9cea2b3ea62ea80d09e9ca46b9ee847b8591e5a7e2a81ae1
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
