@@ -1,6 +1,17 @@
 # ChangeLog for x11-apps/mkfontdir
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.41 2009/04/05 23:36:24 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.44 2009/05/05 12:27:08 jer Exp $
+
+  05 May 2009; Jeroen Roovers <jer@gentoo.org> mkfontdir-1.0.4.ebuild:
+  Stable for HPPA (bug #268581).
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  mkfontdir-1.0.3.ebuild, mkfontdir-1.0.4.ebuild:
+  add empty IUSE entry to silence repoman
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  mkfontdir-1.0.4.ebuild:
+  stable x86, bug 268581
 
   05 Apr 2009; Olivier Crête <tester@gentoo.org> mkfontdir-1.0.4.ebuild:
   amd64 stable
